--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 </html>
 
 <aside>
-    <h2 class="aviso">Últimas noticias</h2> 
+    <h2 class="aviso">Últimas noticias HOLA</h2> 
     <p>¡El nuevo juego de Wii ya está aquí! </p>
 </aside>   
 <section>
